force-app/main/default/objects/GAP_Storage__c/GAP_Storage__c.object-meta.xml
<CustomObject>
    <description>[P2] I-Fresh 매출채권 분석용</description>
    <label>GAP 스토리지</label>
    <nameField>
        <label>Table Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>