force-app/main/default/objects/GAP_Storage__c/fields/exID__c.field-meta.xml
<CustomField>
    <fullName>exID__c</fullName>
    <externalId>true</externalId>
    <label>exID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>