force-app/main/default/objects/GAP_Storage__c/fields/Field_Cnt__c.field-meta.xml
<CustomField>
    <fullName>Field_Cnt__c</fullName>
    <label>필드수</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>