force-app/main/default/objects/GAP_Storage__c/fields/Index_MB__c.field-meta.xml
<CustomField>
    <fullName>Index_MB__c</fullName>
    <label>인덱스 용량(MB)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>