force-app/main/default/objects/GAP_Storage__c/fields/MonthlyCount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyCount__c</fullName>
    <label>월 생성건수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>