force-app/main/default/objects/GAP_Storage__c/fields/Table_Ko__c.field-meta.xml
<CustomField>
    <fullName>Table_Ko__c</fullName>
    <label>테이블명</label>
    <length>64</length>
    <type>Text</type>
</CustomField>