force-app/main/default/objects/GAP_Storage__c/fields/Table_MB__c.field-meta.xml
<CustomField>
    <fullName>Table_MB__c</fullName>
    <label>데이터 용량(MB)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>