force-app/main/default/objects/GAP_Storage__c/fields/Total_Row__c.field-meta.xml
<CustomField>
    <fullName>Total_Row__c</fullName>
    <label>총 건수</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>