force-app/main/default/objects/GAP_Storage__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>구분</label>
    <length>64</length>
    <type>Text</type>
</CustomField>