force-app/main/default/objects/GAP_Storage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Table_Ko__c</columns>
    <columns>Desc__c</columns>
    <columns>Field_Cnt__c</columns>
    <columns>Total_Row__c</columns>
    <columns>Table_MB__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>sa</value>
    </filters>
    <label>All</label>
</ListView>